[package]
name = "replicate-hyper-bug"
version = "0.1.0"
authors = ["joseph.lenton@askattest.com <joseph.lenton@askattest.com>"]
edition = "2018"

[dependencies]
futures = { version = "0.1.25", default-features = false }
http = "0.1.14"
hyper = { version = "0.12.16", default-features = false }
hyper-tls = "0.3.1"
tokio = "0.1.13"
